# universal-file-search

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/ufs/core/: IParser.hpp  ParserRegistry.hpp  Record.hpp
include/ufs/engine/: SearchEngine.hpp
include/ufs/parsers/: CsvParser.hpp  JsonParser.hpp  LogParser.hpp  TextParser.hpp
src/: main.cpp
src/core/: ParserRegistry.cpp
src/engine/: SearchEngine.cpp
src/parsers/: CsvParser.cpp  JsonParser.cpp  LogParser.cpp  TextParser.cpp
tests/: CMakeLists.txt
tests/fixtures/: sample.csv
tests/parsers/: test_csv_parser.cpp
